LOGIN - shadow removed, buttons fixed -- RENEW - spacing fixed, buttons fixed -- NAVBAR - color fixed

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -17,6 +17,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;   
+    padding-bottom: 10px;
+    color: #000;
 }
 
 .footer {
@@ -109,7 +111,6 @@ hr {
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
     color: #fcbc2c;
-    font-weight: 700;
     background-color: #002032;
     height: 43px;
 }
@@ -118,10 +119,10 @@ hr {
     color: #ffffff;   
     padding-right: 36px;
     border-radius: 0px;
+    padding-top: 12px;
 }
 
 .navbar-inverse .navbar-nav>li>a:hover{
-    color: #fcbc2c;
     font-weight: normal;   
     background-color: #1484c7;
     height: 43px;
@@ -152,6 +153,7 @@ hr {
     padding: 13.5px 12px;
     border-top: 0px;
 }    
+
 
 .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
     color: #ffffff;   
@@ -230,13 +232,14 @@ hr {
         column-count:2;
         width: 500px;
 
-        -webkit-column-gap: 2px; /* Chrome, Safari, Opera */
+        -webkit-column-gap: 1px; /* Chrome, Safari, Opera */
         -moz-column-gap: 2px; /* Firefox */
         column-gap: 2px;
 
         background-color: #0A4364;
     
-    }
+    
+}
 }
 
 .navbar-caret{
@@ -349,7 +352,6 @@ hr {
   border-color: #ededed;
   position: absolute;
   border-radius: 0;
-  box-shadow: 0.5px 0.5px 10px #f4f4f4;
   top: 25px;
   width: 287px;
   height: 32px;
@@ -357,11 +359,9 @@ hr {
   cursor: pointer;
 }
 
-/*.alert-help:hover {
-    background-color: #f5bc39;
-    border-color: rgba(0,0,0,0);
-    box-shadow: 0.5px 0.5px 10px #dddddd;
-}*/
+.alert-help:hover {
+    box-shadow: 0 1px 10px #ccc;
+}
 
 .alert-help hr {
   border-top-color: #f7e1b5;
@@ -389,7 +389,7 @@ hr {
 }
 
 .alert-help:hover {
-  box-shadow: 0.5px 0.5px 10px #cfd2d8;
+  box-shadow: 0px 0.5px 5px rgba(204,204,204,0.5);
     }
 
 .notice-icon {
@@ -497,8 +497,9 @@ hr {
     padding: 40px 29px;
     margin: 0 auto 20px;
     background-color: #fff;
-    box-shadow: 1px 1px 15px #ccc;
+    box-shadow: 0px 1px 15px #ccc;
     
+    border-radius: 2px;
 }
 
 .login-blue {
@@ -506,6 +507,10 @@ hr {
     background-color: #3580c7;
     margin: 0 auto;
     padding: 10px 30px 10px;
+    z-index: 1;
+    position: relative;
+    box-shadow: 0px 1px 15px #ccc;
+    border-radius: 2px;
 }
 
 .login-blue h3 {
@@ -524,6 +529,7 @@ hr {
     border-style: solid;
     border-color: rgba(0,0,0,0.1);
     border-width: thin;
+    border-radius: 2px;
 }
 
 .login .btn-primary {
@@ -536,7 +542,6 @@ hr {
 }
 .login .btn-primary:hover {
     background-color: #fdc956;
-    box-shadow: 0 1px 10px rgba(0,0,0,0.2);
 
 }
 
@@ -603,7 +608,6 @@ hr {
     display: block;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 .section-navbar li {
@@ -632,18 +636,18 @@ hr {
     text-decoration: none;
 }
 
-.section-navbar li.active, .section-navbar a:hover  {
-    margin-top:-3px;
-    padding: 5px 0 5px 0;  
+.section-navbar li.active, .section-navbar a:hover  {  
     background-color: rgba(252,180,40,1);
-    border-radius: 0;
+    border-radius: 2px;
     border-top-color: rgba(252,200,40,1);
     border-top-style: solid;
     border-top-width: medium;
     text-decoration: none;
+    padding: 5px 0;
+    margin-top: -3px;
+    height: 31px;
 }
 .section-navbar li.active {
-    padding-bottom: 20px;
 }
 
 #section-head {
@@ -718,11 +722,15 @@ hr {
     border-color: rgba(100,100,100,0.2);
     position: relative;
     top: 65px;
+    width: 1000px;
+    margin-left: -12px;
 }
 
 /* ---------- RESULT PAGINATION ----------- */
 .result-count {
     float: right;
+    position: relative;
+    margin-top: -5px;
 }
 
 .result-count p {
@@ -762,8 +770,32 @@ hr {
 
 td:last-child, th:last-child {
     text-align: right;   
+    position: relative;
+    right:6px;
 }
 
+.table {
+    width:1000px;
+    margin-left: -12px;
+}
+
+td:first-child, th:first-child {
+    left: 6px;
+    position: relative;
+}
+
+.table>tfoot>tr>td {
+    border-top: 2px solid #ddd;
+    border-bottom: 1px solid #ddd;
+
+    height: 40px;
+    vertical-align: middle;
+}
+
+.checkbox-data {
+    position: relative;
+    top:3px;
+}
 /*--------  Section Form --------*/
 
 .section-form .col-md-4 {
@@ -783,6 +815,7 @@ td:last-child, th:last-child {
     height: 45px;
     border-radius: 2px;
     width: 310px;
+    box-shadow: none;
 }
 
 .section-form .btn-default {
@@ -793,17 +826,17 @@ td:last-child, th:last-child {
 
 .section-form .btn {
     background-color: #f9f9f9;
-    border-color: rgba(0,0,0,0.1);
+    border: none;
     font-weight: bold;
     font-size: medium;
     text-transform: uppercase;
     color: #3580c7;
-    border-radius: 0;
+    border-radius: 2px;
     letter-spacing: 0.5px;
 }
 
 .section-form .btn:hover {
-    box-shadow: 0.5px 0.5px 10px #cfd2d8;
+    background-color: #dfdfdf;
 }
 
 .section-form-submit .btn {
@@ -813,11 +846,11 @@ td:last-child, th:last-child {
     font-size: medium;
     text-transform: uppercase;
     color: #fff;
-    border-radius: 0;
+    border-radius: 2px;
 }
 
 .section-form-submit .btn:hover {
-    box-shadow: 1px 1px 10px #ccc;
+    background-color: #fdc956;
 }
 
 
